--- a/WPF/Mob/CHICKEN.xaml
+++ b/WPF/Mob/CHICKEN.xaml
@@ -4,11 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob"
-             mc:Ignorable="d" Height="300" Width="290">
+             mc:Ignorable="d" Height="290" Width="290">
     <Grid>
         <Label Content="鸡设置" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="90"/>
-        <CheckBox Content="是否为鸡骑士" HorizontalAlignment="Left" Height="15" Margin="10,25,0,0" VerticalAlignment="Top" Width="100"
+        <CheckBox Content="是否为鸡骑士" HorizontalAlignment="Left" Height="15" Margin="10,25,0,0" VerticalAlignment="Top"
                   IsChecked="{Binding obj.Jockey}"/>
-
+        <Label Content="年龄" HorizontalAlignment="Left" Height="25" Margin="10,40,0,0" VerticalAlignment="Top" Width="40"/>
+        <Slider HorizontalAlignment="Left" Height="25" Margin="50,45,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
+        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Height="25" Margin="250,45,0,0" VerticalAlignment="Top" Width="40"/>
+        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top"
+                  IsChecked="{Binding obj.AgeLock}"/>
     </Grid>
 </UserControl>
