--- a/WPF/Mob/OCELOT.xaml
+++ b/WPF/Mob/OCELOT.xaml
@@ -11,6 +11,13 @@
         <ComboBox HorizontalAlignment="Left" Height="20" Margin="70,30,0,0" VerticalAlignment="Top" Width="135"
                   Name="Type" Text="{Binding obj.Ocelot}"/>
         <Button Content="随机种类" HorizontalAlignment="Left" Height="20" Margin="210,30,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click"/>
+        <Label Content="年龄" HorizontalAlignment="Left" Height="25" Margin="10,55,0,0" VerticalAlignment="Top"/>
+        <Slider HorizontalAlignment="Left" Height="25" Margin="50,59,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
+        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top"
+            IsChecked="{Binding obj.AgeLock}"/>
+        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Height="25" Margin="250,55,0,0" VerticalAlignment="Top" Width="40"/>
+        <CheckBox Content="是否能被驯服" HorizontalAlignment="Left" Margin="90,89,0,0" VerticalAlignment="Top"
+            IsChecked="{Binding obj.Tameable}"/>
 
     </Grid>
 </UserControl>
