--- a/WPF/Mob/PIG.xaml
+++ b/WPF/Mob/PIG.xaml
@@ -9,6 +9,11 @@
         <Label Content="猪设置" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="90"/>
         <CheckBox Content="是否带鞍" HorizontalAlignment="Left" Height="20" Margin="10,25,0,0" VerticalAlignment="Top" Width="100"
                   IsChecked="{Binding obj.Saddled}"/>
+        <Label Content="年龄" HorizontalAlignment="Left" Height="25" Margin="10,40,0,0" VerticalAlignment="Top"/>
+        <Slider HorizontalAlignment="Left" Height="25" Margin="50,44,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
+        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,74,0,0" VerticalAlignment="Top"
+            IsChecked="{Binding obj.AgeLock}"/>
+        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Height="25" Margin="250,40,0,0" VerticalAlignment="Top" Width="40"/>
 
     </Grid>
 </UserControl>
