--- a/WPF/Mob/RABBIT.xaml
+++ b/WPF/Mob/RABBIT.xaml
@@ -13,6 +13,11 @@
         <Button Content="随机种类" HorizontalAlignment="Left" Height="20" Margin="220,30,0,0" VerticalAlignment="Top" Width="60" Click="Button_Click"/>
         <CheckBox Content="是否为小兔子" HorizontalAlignment="Left" Height="15" Margin="10,55,0,0" VerticalAlignment="Top" Width="110"
                   IsChecked="{Binding obj.Baby}"/>
+        <Label Content="年龄" HorizontalAlignment="Left" Height="25" Margin="10,75,0,0" VerticalAlignment="Top"/>
+        <Slider HorizontalAlignment="Left" Height="25" Margin="50,79,0,0" VerticalAlignment="Top" Width="195" Minimum="-1" Maximum="1" LargeChange="0.1" Value="{Binding obj.Age}" TickFrequency="0.1"/>
+        <CheckBox Content="锁住年龄" HorizontalAlignment="Left" Margin="10,109,0,0" VerticalAlignment="Top"
+            IsChecked="{Binding obj.AgeLock}"/>
+        <Label Content="{Binding obj.Age}" HorizontalAlignment="Left" Height="25" Margin="250,75,0,0" VerticalAlignment="Top" Width="40"/>
 
     </Grid>
 </UserControl>
