--- a/WPF/Mob/add_mob.xaml
+++ b/WPF/Mob/add_mob.xaml
@@ -5,28 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:userControl="clr-namespace:MythicMobs_edit.WPF.Mob"
         mc:Ignorable="d"
-        Title="MythicMobs_edit 添加生物" Height="626" Width="963" ResizeMode="CanMinimize">
+        Title="MythicMobs_edit 添加生物" Height="626" Width="1363" ResizeMode="CanMinimize">
     <Grid>
-        <TextBox Margin="620,0,0,0" TextWrapping="Wrap" Background="#AA898989" Name="Out"/>
+        <TextBox Margin="1030,0,0,0" TextWrapping="Wrap" Background="#AA898989" Name="Out"/>
 
-        <Label Content="生物名字" HorizontalAlignment="Left" Height="25" Margin="5,0,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="生物类型" HorizontalAlignment="Left" Height="25" Margin="5,25,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="显示名称" HorizontalAlignment="Left" Height="25" Margin="5,50,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="血量" HorizontalAlignment="Left" Height="25" Margin="5,75,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="伤害" HorizontalAlignment="Left" Height="25" Margin="5,100,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="护甲" HorizontalAlignment="Left" Height="25" Margin="5,125,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="标题" HorizontalAlignment="Left" Height="25" Margin="5,171,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="显示范围" HorizontalAlignment="Left" Height="25" Margin="5,196,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="血条颜色" HorizontalAlignment="Left" Height="25" Margin="5,221,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="血条风格" HorizontalAlignment="Left" Height="25" Margin="5,246,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="派系名称" HorizontalAlignment="Left" Height="25" Margin="5,292,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="坐骑" HorizontalAlignment="Left" Height="25" Margin="5,317,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="攻击速度" HorizontalAlignment="Left" Height="25" Margin="5,342,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="跟随距离" HorizontalAlignment="Left" Height="25" Margin="5,367,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="抗击退" HorizontalAlignment="Left" Height="25" Margin="5,390,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-        <Label Content="受伤害半径" HorizontalAlignment="Left" Height="25" Margin="0,415,0,0" VerticalAlignment="Top" Width="70" HorizontalContentAlignment="Center"/>
-        <Label Content="移动速度" HorizontalAlignment="Left" Height="25" Margin="5,440,0,0" VerticalAlignment="Top" Width="60" HorizontalContentAlignment="Center"/>
-
+        <Label Content="生物名字" HorizontalAlignment="Left" Height="25" Margin="5,0,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="生物类型" HorizontalAlignment="Left" Height="25" Margin="5,25,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="显示名称" HorizontalAlignment="Left" Height="25" Margin="5,50,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="血量" HorizontalAlignment="Left" Height="25" Margin="5,75,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="伤害" HorizontalAlignment="Left" Height="25" Margin="5,100,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="护甲" HorizontalAlignment="Left" Height="25" Margin="5,125,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="标题" HorizontalAlignment="Left" Height="25" Margin="5,171,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="显示范围" HorizontalAlignment="Left" Height="25" Margin="5,196,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="血条颜色" HorizontalAlignment="Left" Height="25" Margin="5,221,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="血条风格" HorizontalAlignment="Left" Height="25" Margin="5,246,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="派系名称" HorizontalAlignment="Left" Height="25" Margin="5,292,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="坐骑" HorizontalAlignment="Left" Height="25" Margin="5,317,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="攻击速度" HorizontalAlignment="Left" Height="25" Margin="5,342,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="跟随距离" HorizontalAlignment="Left" Height="25" Margin="5,367,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="抗击退" HorizontalAlignment="Left" Height="25" Margin="5,390,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="受伤害半径" HorizontalAlignment="Left" Height="25" Margin="0,415,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="移动速度" HorizontalAlignment="Left" Height="25" Margin="5,440,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center"/>
+        <Label Content="生物AI" HorizontalAlignment="Left" Margin="325,429,0,0" VerticalAlignment="Top"/>
+        
         <ComboBox HorizontalAlignment="Left" Margin="70,29,0,0" VerticalAlignment="Top" 
                   Width="170" Height="20" Name="Mob_Type" SelectionChanged="Mob_Type_SelectionChanged"/>
         <ComboBox HorizontalAlignment="Left" Margin="70,225,0,0" VerticalAlignment="Top" 
@@ -63,56 +64,56 @@
         <TextBox HorizontalAlignment="Left" Height="20" Margin="70,445,0,0" TextWrapping="Wrap" 
             VerticalAlignment="Top" Width="170" Text="{Binding Mob.Options.MovementSpeed}" x:Name ="Options_MovementSpeed" PreviewTextInput="TextCompositionEventArgs"/>
 
-        <CheckBox Content="BOSS血条" HorizontalAlignment="Left" Height="15" Margin="10,155,0,0" VerticalAlignment="Top" Width="100"
+        <CheckBox Content="BOSS血条" HorizontalAlignment="Left" Height="15" Margin="10,155,0,0" VerticalAlignment="Top"
                   IsChecked="{Binding Mob.BossBar.Enabled}" Checked="CheckBox_Checked" x:Name="BossBar_Enabled"/>
-        <CheckBox Content="雾" HorizontalAlignment="Left" Height="15" Margin="10,276,0,0" VerticalAlignment="Top" Width="35"
+        <CheckBox Content="雾" HorizontalAlignment="Left" Height="15" Margin="10,276,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.BossBar.CreateFog}" x:Name="BossBar_CreateFog" IsEnabled="False"/>
-        <CheckBox Content="黑色天空" HorizontalAlignment="Left" Height="15" Margin="70,276,0,0" VerticalAlignment="Top" Width="70"
+        <CheckBox Content="黑色天空" HorizontalAlignment="Left" Height="15" Margin="70,276,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.BossBar.DarkenSky}" x:Name="BossBar_DarkenSky" IsEnabled="False"/>
-        <CheckBox Content="音乐播放" HorizontalAlignment="Left" Height="15" Margin="170,276,0,0" VerticalAlignment="Top" Width="70"
+        <CheckBox Content="音乐播放" HorizontalAlignment="Left" Height="15" Margin="170,276,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.BossBar.PlayMusic}" Name="BossBar_PlayMusic" IsEnabled="False"/>
-        <CheckBox Content="总是显示名称" HorizontalAlignment="Left" Height="15" Margin="10,470,0,0" VerticalAlignment="Top" Width="100"
+        <CheckBox Content="总是显示名称" HorizontalAlignment="Left" Height="15" Margin="10,470,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.AlwaysShowName}" x:Name="Options_AlwaysShowName"/>
-        <CheckBox Content="是否可碰撞" HorizontalAlignment="Left" Height="15" Margin="110,470,0,0" VerticalAlignment="Top" Width="100"
+        <CheckBox Content="是否可碰撞" HorizontalAlignment="Left" Height="15" Margin="110,470,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.Collidable}" x:Name="Options_Collidable"/>
-        <CheckBox Content="没有玩家时会被删除" HorizontalAlignment="Left" Height="15" Margin="10,510,0,0" VerticalAlignment="Top" Width="155"
+        <CheckBox Content="没有玩家时会被删除" HorizontalAlignment="Left" Height="15" Margin="10,510,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.Despawn}" x:Name="Options_Despawn"/>
-        <CheckBox Content="发光" HorizontalAlignment="Left" Height="15" Margin="10,490,0,0" VerticalAlignment="Top" Width="75"
+        <CheckBox Content="发光" HorizontalAlignment="Left" Height="15" Margin="10,490,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.Glowing}" x:Name="Options_Glowing"/>
-        <CheckBox Content="无敌" HorizontalAlignment="Left" Height="15" Margin="85,490,0,0" VerticalAlignment="Top" Width="75"
+        <CheckBox Content="无敌" HorizontalAlignment="Left" Height="15" Margin="85,490,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.Invincible}" x:Name="Options_Invincible"/>
-        <CheckBox Content="无AI" HorizontalAlignment="Left" Height="15" Margin="160,490,0,0" VerticalAlignment="Top" Width="75"
+        <CheckBox Content="无AI" HorizontalAlignment="Left" Height="15" Margin="160,490,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.NoAI}" x:Name="Options_NoAI"/>
-        <CheckBox Content="是否有重力" HorizontalAlignment="Left" Height="15" Margin="10,530,0,0" VerticalAlignment="Top" Width="85"
+        <CheckBox Content="是否有重力" HorizontalAlignment="Left" Height="15" Margin="10,530,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.NoGravity}" x:Name="Options_NoGravity"/>
-        <CheckBox Content="击杀命令下无敌" HorizontalAlignment="Left" Height="15" Margin="95,530,0,0" VerticalAlignment="Top" Width="110"
+        <CheckBox Content="击杀命令下无敌" HorizontalAlignment="Left" Height="15" Margin="95,530,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.Persistent}" x:Name="Options_Persistent"/>
-        <CheckBox Content="防止生物捡起物品" HorizontalAlignment="Left" Height="15" Margin="10,550,0,0" VerticalAlignment="Top" Width="120"
+        <CheckBox Content="防止生物捡起物品" HorizontalAlignment="Left" Height="15" Margin="10,550,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.PreventItemPickup}" x:Name="Options_PreventItemPickup"/>
-        <CheckBox Content="防止被栓绳拉住" HorizontalAlignment="Left" Height="15" Margin="135,550,0,0" VerticalAlignment="Top" Width="105"
+        <CheckBox Content="防止被栓绳拉住" HorizontalAlignment="Left" Height="15" Margin="135,550,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.PreventLeashing}" x:Name="Options_PreventLeashing"/>
-        <CheckBox Content="防止被MythicMob击杀后掉落物品" HorizontalAlignment="Left" Height="15" Margin="10,570,0,0" VerticalAlignment="Top" Width="210"
+        <CheckBox Content="防止被MythicMob击杀后掉落物品" HorizontalAlignment="Left" Height="15" Margin="10,570,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.PreventMobKillDrops}" x:Name="Options_PreventMobKillDrops"/>
-        <CheckBox Content="是否应该阻止原版掉落" HorizontalAlignment="Left" Height="15" Margin="325,6,0,0" VerticalAlignment="Top" Width="145"
+        <CheckBox Content="是否应该阻止原版掉落" HorizontalAlignment="Left" Height="15" Margin="325,6,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.PreventOtherDrops}" x:Name="Options_PreventOtherDrops"/>
-        <CheckBox Content="阻止生物出生时有随机装备" HorizontalAlignment="Left" Height="15" Margin="325,26,0,0" VerticalAlignment="Top" Width="165"
+        <CheckBox Content="阻止生物出生时有随机装备" HorizontalAlignment="Left" Height="15" Margin="325,26,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.PreventRandomEquipment}" x:Name="Options_PreventRandomEquipment"/>
-        <CheckBox Content="阻止使用命名牌重命名" HorizontalAlignment="Left" Height="15" Margin="325,46,0,0" VerticalAlignment="Top" Width="145"
+        <CheckBox Content="阻止使用命名牌重命名" HorizontalAlignment="Left" Height="15" Margin="325,46,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.PreventRenaming}" x:Name="Options_PreventRenaming"/>
-        <CheckBox Content="如果生物的血量恢复到技能设置的血量阈值以上，&#xD;&#xA;是否可以重新使用此技能" HorizontalAlignment="Left" Height="28" Margin="325,66,0,0" VerticalAlignment="Top" Width="290"
+        <CheckBox Content="如果生物的血量恢复到技能设置的血量阈值以上，&#xD;&#xA;是否可以重新使用此技能" HorizontalAlignment="Left" Height="28" Margin="325,66,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.RepeatAllSkills}" x:Name="Options_RepeatAllSkills"/>
-        <CheckBox Content="显示生命信息" HorizontalAlignment="Left" Height="15" Margin="325,99,0,0" VerticalAlignment="Top" Width="165"
+        <CheckBox Content="显示生命信息" HorizontalAlignment="Left" Height="15" Margin="325,99,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.ShowHealth}" x:Name="Options_ShowHealth"/>
-        <CheckBox Content="阻止生物发出原版音效" HorizontalAlignment="Left" Height="15" Margin="325,119,0,0" VerticalAlignment="Top" Width="165"
+        <CheckBox Content="阻止生物发出原版音效" HorizontalAlignment="Left" Height="15" Margin="325,119,0,0" VerticalAlignment="Top"
             IsChecked="{Binding Mob.Options.Silent}" x:Name="Options_Silent"/>
 
         <Button Content="随机颜色" HorizontalAlignment="Left" Height="20" Margin="245,225,0,0" VerticalAlignment="Top" Width="70"
                 Name="BossBar_Color_r" Click="BossBar_Color_r_Click" IsEnabled="False"/>
         <Button Content="随机风格" HorizontalAlignment="Left" Height="20" Margin="245,251,0,0" VerticalAlignment="Top" Width="70"
                 x:Name="BossBar_Style_r" IsEnabled="False" Click="BossBar_Style_r_Click"/>
+        <Button Content="就决定是你了" HorizontalAlignment="Left" Height="25" Margin="945,560,0,0" VerticalAlignment="Top" Width="80" Click="Button_Click"/>
         
         <StackPanel HorizontalAlignment="Left" Height="290" Margin="325,139,0,0" VerticalAlignment="Top" Width="290" Name="panel"/>
-        <Button Content="就决定是你了" HorizontalAlignment="Left" Height="25" Margin="535,560,0,0" VerticalAlignment="Top" Width="80" Click="Button_Click"/>
 
     </Grid>
 </Window>
